Fix mobile overflow issue causing horizontal scroll

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 /*styling for bg img*/
 .bg3 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(../image/post25.jpg );
