--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -3,6 +3,9 @@
     margin: 0;
 }
 
+html, body {
+  overflow-x: hidden;
+}
 
 /*styling for bg img*/
 .bg2 {
