--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,7 +3,9 @@
     margin: 0;
 }
 
-
+html, body {
+  overflow-x: hidden;
+}
 
 /* styling of nav bar */
 .navbar {
